--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ layout: default
     <article>
       <ul class="large-list ct mt-1">
         {% for post in paginator.posts %}
-          <li>
-            <a href="{{ post.url }}" title="{{post.title}}">
+          <li class="large-list--item">
+            <a href="{{ post.url }}" title="{{post.title}}" class="large-list--link">
               <date datetime="{{post.date}}" class="meta">
                 {{ post.date | date_to_long_string }}
               </date>
