New content in example posts. New post format with hero image full bleed as banner.

--- a/_posts/2013-05-10-css-is-horrible.html
+++ b/_posts/2013-05-10-css-is-horrible.html
@@ -1,10 +1,21 @@
 ---
-title: CSS is Horrible
 layout: posts
+title: "Readability is important"
 author: Adam
----
 
-<img src="/img/photo.jpg">
+header_img: "https://s3-us-west-2.amazonaws.com/mrmrs/12.jpg"
+text_color: "#27333f"
+---
+<blockquote>
+  <p>Typography exists to honor content.</p>
+  <footer>
+    <a href="#">- Robert Bringhurst</a>
+  </footer>
+</blockquote>
 <p>
-  A photo caption.
+  Let your typography serve your content. Everytime you set a font-size to less
+  than 16px you're telling your audience you don't really care if they read it or not.
+  Don't stand in the way of the content you worked so hard to generate. Let it breath.
+  Set it big or don't set it at all.
 </p>
+
