--- a/_posts/2014-02-14-post-future-example.html
+++ b/_posts/2014-02-14-post-future-example.html
@@ -18,6 +18,7 @@ layout: posts
 {% endhighlight %}
 
 <h2 class="h3 mt-1">Ruby Code</h2>
+<pre>
 {% highlight ruby %}
   class KeychainPromotion
     def initialize(purchase_process)
@@ -31,4 +32,5 @@ layout: posts
     end
   end    
 {% endhighlight %}
+</pre>
 
