--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
   </article>
   <section class="mt-4">
     <article>
-      <ul class="large-list ct mt-1">
+      <ul class="large-list center mt-1">
         {% for post in paginator.posts %}
           <li class="large-list--item">
             <a href="{{ post.url }}" title="{{post.title}}" class="large-list--link">
