--- a/_posts/2013-01-01-blog-with-code-examples.html
+++ b/_posts/2013-01-01-blog-with-code-examples.html
@@ -1,13 +1,19 @@
 ---
-title: A Post About Coding Things with Examples
-layout: posts
+title: Blog Post with Code Examples
+layout: text
 ---
 
 <p>
-  We call it the after after after party. 
+  JKL comes out of the box with syntax highlighting ready to rock. If you don't like
+  the provided syntax highlighting - just replace _sass/_syntax.scss with your
+  preferred pygments theme.
 </p>
 
-<h2 class="h3 mt-1">CSS Code</h2>
+<p>
+  Some examples of syntax highlighting.
+</p>
+
+<h2 class="h3 mt-4">CSS Code</h2>
 {% highlight css %}
   .ct-r {
     text-align:center; 
@@ -17,7 +23,7 @@ layout: posts
   }
 {% endhighlight %}
 
-<h2 class="h3 mt-1">Ruby Code</h2>
+<h2 class="h3 mt-4">Ruby Code</h2>
 <pre>
 {% highlight ruby %}
   class KeychainPromotion
