--- a/_posts/2013-0101-introducing-jkl.html
+++ b/_posts/2013-0101-introducing-jkl.html
@@ -1,9 +1,8 @@
 ---
-title: JKL
-layout: posts
+title: Blog Post Example
+layout: text
 author: MRMRS
 ---
-
 <p>
   Introducing JKL - a lightweight boilerplate for creating a responsive Jekyll blog. Minimal styles focused on readability.
   You shouldn't have to do busy work to get going. After filling out a few small details in the config file, the only thing you need
