--- a/_posts/2013-01-03-soundcloud-template.html
+++ b/_posts/2013-01-03-soundcloud-template.html
@@ -1,9 +1,10 @@
 ---
 title: Soundcloud Post
-layout: posts
+layout: media
 ---
-<p class="bump-it">
-  Bump this all day. Spooky, scary.
-</p>
 
 <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F76918397&amp;color=ff6600&amp;auto_play=false&amp;show_artwork=true"></iframe>
+
+<p class="bump-it">
+  Can't get enough of this track. Need to check if my headphones can take this one to 11.
+</p>
