--- a/_posts/2013-05-20-full-bleed-header.html
+++ b/_posts/2013-05-20-full-bleed-header.html
@@ -1,10 +1,10 @@
 ---
-layout: posts
-title: "Readability is important"
+layout: full_bleed_header
+title: "Full Bleed Header"
 author: Adam
 
-header_img: "https://s3-us-west-2.amazonaws.com/mrmrs/12.jpg"
-text_color: "#27333f"
+header_img: "https://s3-us-west-2.amazonaws.com/mrmrs/11.jpg"
+text_color: "#fff"
 ---
 <blockquote>
   <p>Typography exists to honor content.</p>
